support Node.js versions with no built-in Buffer.from()
by using safe-buffer https://github.com/feross/safe-buffer

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	],
 	"dependencies": {
 		"buble": "^0.18.0",
+		"safe-buffer": "^5.1.1",
 		"source-map-to-comment": "^1.1.0",
 		"to-fast-properties": "^2.0.0"
 	},
